# test-learn-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  README_CN.md  README_EN.md  config.yaml  count-lines.sh  docker-compose.yml  pom.xml  run-tests.sh  start-all.sh
.aone_copilot/plans/AI Coding Harness 工程脚手架建设/: implementation_plan.md  task.md
.aone_copilot/plans/AI对话性能优化/: implementation_plan.md  (+1 more)
.aone_copilot/rules/: 05-测试规范.md  07-Git提交规范.md  工程结构.md
.claude/: settings.local.json
.github/workflows/: ci.yml
data/memory/: default.json
docs/: CODE_GUIDE.md  DEPLOYMENT.md
docs/notes/: _TEMPLATE.md  multi-tool-agent-strategies.md
docs/roadmap/: 01-guardrails.md  02-evals.md  03-human-in-the-loop.md  04-prompt-engineering.md  05-multi-agent.md  README.md
finance-agent/: Dockerfile  pom.xml
finance-agent-py/: agent.py  chat_server.py  config_loader.py  guardrails.py  main.py  memory_manager.py  pyproject.toml  requirements.txt  system_prompt.py  test_guardrails.py
finance-agent-py/tests/: test_chat_server.py  test_config_loader.py  test_memory_manager.py  test_system_prompt.py
finance-backend/: .gitignore  Dockerfile  pom.xml
finance-frontend/: .eslintrc.cjs  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js  vitest.config.js
finance-frontend/src/: App.vue  main.js
finance-frontend/test/: sanity.test.js
finance-mcp-server/: Dockerfile  pom.xml
finance-mcp-server-py/: pyproject.toml  server.py
finance-mcp-server-py/tests/: test_tools.py
githooks/: commit-msg  post-commit
scripts/: seed_transactions.py
(+157 files in other folders)
