[project]
name = "finance-agent-py"
version = "1.0.0"
description = "Python LangChain Agent for Personal Finance"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-deepseek>=0.1.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.2.0",
    "fastapi>=0.115.0",
    "sse-starlette>=2.0.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
